--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box; 
+    text-decoration: none;
 }
 
 body{
@@ -15,35 +16,60 @@ body{
     color: white;
 }
 
-header .container{
+header{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: left;
+    height: 65px;
 }
 
 header .logo{
-    margin-left: 5px;
+    margin-left: 30px;
+    margin-right: 50px;
     color: var(--vermelho);
-    font-family: 'Arial Black';
-    font-size: 40px;
+    font-family: 'Arial';
+    font-size: 25px;
 }
 
-header nav a{
-    text-decoration: none;
-    color: #aaa;
-    margin-right: 10px;
-}
-
-header nav a:hover{
+nav a{
     color: #fff;
+    margin-right: 15px;
+    font-size: 15px;
 }
 
+nav a:hover{
+    color: #ffffff5e;
+    transition: .7s;
+}
+
+header .div-icones{
+    margin-left: 604px;
+}
+
+#icon-search{
+    font-size: 18px;
+    margin-right: 28px;
+    cursor: pointer;
+}
+#icon-bell{
+    font-size: 22px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+#icon-profile{
+    font-size: 32px;
+    cursor: pointer;
+}
+#icon-arrow{
+    font-size: 15px; 
+    cursor: pointer;  
+}
 
 /*filme principal*/
 .filme-principal{
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/fundoVikings.jpg');
-    height: 400px;
+    height: 550px;
     background-size: cover;
     display: flex;
     flex-direction: column; 
@@ -52,49 +78,46 @@ header nav a:hover{
 }
 
 .filme-principal .descricao{
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    width: 400px;
 }
 
 .filme-principal .titulo{
-    margin-top: 15px;
-    font-size: 40px;
+    margin-top: 30px;
+    font-size: 80px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .botao{
-    background-color: rgba(0, 0, 0, .50);
     border: none;
     color: white;
     padding: 15px 30px;
     margin-right: 15px;
-    font-size: 12px;
+    font-size: 15px;
+    font-weight: 700;
+    border-radius: 5px;
     cursor: pointer;
 }
-
-.botao:hover{
-    background-color: white;
+#btn-assistir{
     color: black;
-    transition: 0.7s ease all;
+    background-color: rgb(255, 255, 255, .9);
+}
+#btn-assistir:hover{
+    background-color: rgb(255, 255, 255, .6);
+}
+#btn-info{
+    color: white;
+    background-color: rgba(150, 149, 149, 0.2);
+}
+#btn-info:hover{
+    background-color: rgba(150, 149, 149, 0.1);
 }
 
 .botao i{
     margin-right: 8px;
+    font-size: 15px;
 }
 
 .container{
-    margin-left: 20px;
-}
-
-.filme-principal .container{
-    width: 70%;
-}
-
-.box-filmes{
-    height: 100%;
-    width: 100%;
-    display: block;
-}
-
-.carrosel{
-    margin-top: 5px;
+    margin-left: 60px;
 }
